# VocabVoyage

./: .dockerignore  .gitignore  Dockerfile  app.py  graph.py  models.py  pyproject.toml  vocabulary_workflow  vocabulary_write_to_chroma.py
chroma_db/d755ca45-fa07-40a1-a5a3-fff95e03e5c1/: index_metadata.pickle
notebook/: docker.txt  langgraph_example_RAG.py  langgraph_example_tools.py  models(sqlite).py  pdf_text_extraction.py  vocabulary_generator.py
notebook/vocabulary_output/: daily_life.txt  education_learning.txt  entertainment_leisure.txt  environment_nature.txt  food_dining.txt  health_medical.txt  social_relationships.txt  technology_digital.txt  travel_transportation.txt  work_career.txt
